# Facial-Recognition-Models-Mitigating-Bias

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  PROPOSTA_MESTRADO.md  README.md  REVIEW_AND_PLAN.md  ROADMAP.md  bkp.py  bucket_fairface.py  face_dataset.py  face_recognition_dataset_download.py  gradcam.py  gradcam_analysis.py  main.py  model_analysis.py  models.py  pre_processing_images.py  process_images.py  pyproject.toml  requirements-pre-torch-bump.txt  requirements.txt  run_main.py  run_main_bkp.py  run_new_main.py  setup.sh  teste.py  teste_1.py  tsne_analysis.py  versions.py
.claude/: settings.local.json
config/: default.yaml
configs/: credentials.json.example  default.yaml  test_config.yaml  test_multi_config.yaml
configs/ablation_no_undersample/: README.md  exp_abl_nous_control_s01.yaml  exp_abl_nous_control_s02.yaml  exp_abl_nous_control_s42.yaml  exp_abl_nous_convnext_s01.yaml  exp_abl_nous_convnext_s02.yaml  exp_abl_nous_convnext_s42.yaml
configs/ablation_patience/: exp_dropout00_convnext_s42.yaml  exp_oversample_convnext_s42.yaml  exp_patience15_convnext_s42.yaml  exp_trivaug_convnext_s42.yaml
configs/anchor_fairface_recipe/: anchor_fairface_recipe_s02.yaml  anchor_fairface_recipe_s42.yaml  exp_anc_fairface_recipe_s01.yaml
configs/anchor_finefacerecipe/: anchor_finefacerecipe_s01.yaml  anchor_finefacerecipe_s02.yaml  anchor_finefacerecipe_s42.yaml
configs/anchor_hassanpour/: README.md  exp_anc_hass_control_s01.yaml  exp_anc_hass_control_s02.yaml  exp_anc_hass_control_s42.yaml  exp_anc_hass_convnext_s01.yaml  exp_anc_hass_convnext_s02.yaml  exp_anc_hass_convnext_s42.yaml
configs/anchor_rawdata/: exp_anc_rawdata_s01.yaml  exp_anc_rawdata_s02.yaml  exp_anc_rawdata_s42.yaml
configs/experiments/: exp01_ce_sgd_onecycle.yaml  exp01_mba_replication.yaml  exp02_arcface_sgd_onecycle.yaml  exp03_ce_adamw_onecycle.yaml  exp04_arcface_adamw_onecycle.yaml  exp05_ce_adamw_cosine.yaml  exp06_arcface_adamw_cosine.yaml  (+5 more)
data/: bucket_dataset.py  face_dataset.py
dataset/: fairface_balanced_concat_dataset.csv  fairface_label_train-lab.csv
docs/: HISTORICO.md  PLANO_TRABALHO.md  PROPOSTA_MESTRADO.md  README.md  THESIS_STATEMENT.md  apresentacao_orientador_2026-05-24.md  baseline_positioning.md  checkpoint_criterion_audit.md  clean_results.md  dataset_audit_findings.md  dataset_factor_results.md  disruption_roadmap.md  exp01_vs_mba.md  factor3_results.md  factor4_results.md  factor5_results.md  formula_desk_check.md  literature_corpus_abstracts.csv  meeting_2026-05-11_kickoff.md  meeting_prep_2026-05-11.md  meeting_prep_2026-05-18.md  nomenclatura_experimentos.md  r2_clean_dataset_results.md  r4_refit_results.md  requerimento_estudos_dirigidos.md  security_audit.md  slides_qualificacao.md  smoke_results.md  sota_7class_race_audit.md  sota_papers_summary.md  sota_pdf_synthesis.md  sota_review.md  status_orientador_2026-05-18.md
docs/ativo/: 06_gap.md  (+59 more)
models/: arc_layers.py  base_model.py  losses.py  models.py  resnet_model.py
old/: face_recognition_dataset_download.py  gradcam_analysis.py  main.py  models.py  tsne_analysis.py
pipelines/: 01_download_dataset.py  02_preprocess.py  pre_processing_pipeline.py
preprocessing/: bucket_fairface.py  pre_processing_images.py  transformations.py
scripts/: audit_multi_face.py  calibration_threshold_opt.py  compare_clean_vs_mba.py  diag_magface_mechanism.py  diag_magface_realtrain.py  ensemble_eval.py  fetch_citing_corpus.py  filter_dataset_clean.py  generate_ablation_no_undersample_configs.py  generate_anchor_fairface_configs.py  generate_anchor_finefacerecipe_configs.py  generate_anchor_hassanpour_configs.py  generate_anchor_rawdata_configs.py  generate_dataset_factor_configs.py  generate_experiment_configs.py  generate_factor3_configs.py  generate_factor4_configs.py  generate_factor5_configs.py  generate_refit_configs.py  hpo_head.py  intersectional_fairness_analysis.py  plot_all_experiments.py  plot_experiment.py  probe_embedding_norm.py  reanalyze_hpo_round1.py  recompute_checkpoint_criterion.py  run_all_experiments.py  semantic_search_corpus.py  tta_eval.py
tests/: test_draw_bounding.py
utils/: config.py  custom_logging.py  logging.py  versions.py
(+298 files in other folders)
