[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face-bias"
version = "0.2.0.dev0"
description = "Facial recognition bias mitigation - evolution from MBA to mestrado"
readme = "README.md"
requires-python = ">=3.9,<3.12"
authors = [{ name = "Marcello Ozzetti", email = "marcello.ozzetti@gmail.com" }]
license = { text = "MIT" }
keywords = ["face-recognition", "fairness", "bias-mitigation", "deep-learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  # torch bumped to 2.11 to close CVE-2025-32434 (Critical, weights_only RCE),
  # CVE-2026-24747 (High, weights_only RCE #2) and GHSA-2rj9-7h5r-q4h8
  # (Moderate, libuv tensorpipe Improper Resource Shutdown).
  # See docs/security_audit.md for the full audit trail.
  "torch>=2.11,<3.0",
  "torchvision>=0.26,<1.0",
  "facenet-pytorch>=2.5.3",
  "opencv-python-headless>=4.8",
  "numpy>=1.23,<2.0",
  "pandas>=2.0,<3.0",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
  "pydantic>=2.0",
  "boto3>=1.28",
  "tqdm>=4.65",
  "matplotlib>=3.7",
  "Pillow>=12.2.0",          # security: CVE-2024-28219, CVE-2026-42308, CVE-2026-42310
  "requests>=2.31",
  "mlflow>=2.10",
  # Transitive deps pinned to security-patched minima so a fresh
  # install (without the requirements.txt lock) still picks safe versions.
  "urllib3>=2.7.0",          # security: CVE-2026-44431, CVE-2026-44432
  "idna>=3.7",               # security: PYSEC-2024-60
  "Jinja2>=3.1.6",           # security: CVE-2025-27516
  "fonttools>=4.60.2",       # security: CVE-2025-66034
  "filelock>=3.20.3",        # security: CVE-2025-68146, CVE-2026-22701
  "setuptools>=78.1.1",      # security: PYSEC-2025-49, CVE-2024-6345
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4.0",
  "black>=24.0",
  "pre-commit>=3.5",
  "moto>=5.0",
]
dvc = [
  "dvc[s3]>=3.30",
]
hpo = [
  "optuna>=3.6",
]
literature = [
  "sentence-transformers>=3.0",
]

[project.scripts]
face-bias-download   = "face_bias.cli.download:main"
face-bias-preprocess = "face_bias.cli.preprocess:main"
face-bias-train      = "face_bias.cli.train:main"
face-bias-evaluate   = "face_bias.cli.evaluate:main"
face-bias-tsne       = "face_bias.cli.tsne:main"
face-bias-gradcam    = "face_bias.cli.gradcam:main"
face-bias-version    = "face_bias.cli.version:main"

[tool.setuptools.packages.find]
where = ["src"]

# ---------- Tooling ----------

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",             # isort
  "B",             # bugbear
  "UP",            # pyupgrade
  "SIM",           # simplify
  "N",             # naming
]
ignore = [
  "E501",          # line length handled by black
  "N801",          # paper-name model classes (LResNet50E_IR, etc.)
  "N803",          # ML convention: lowercase X, y is fine
  "N806",          # same for X_train, etc.
  "N812",          # PyTorch idiom: import torch.nn.functional as F
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"pipelines/*" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "unit: fast unit tests (no I/O, no GPU)",
  "integration: tests that touch the filesystem or mock cloud services",
  "smoke: end-to-end smoke tests with mini datasets",
  "gpu: tests that require CUDA (skipped on CPU-only machines)",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/face_bias"]
omit = ["tests/*", "pipelines/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
